vlib/v/checker/tests/selector_expr_optional_err.vv
struct HttpResult {
	status_code int
}

fn abc() ?HttpResult {
	return HttpResult{}
}

fn main() {
	println(abc().status_code)
}
